added small changes
